Fix wrong margin

--- a/app/public/static/css/buckutt.css
+++ b/app/public/static/css/buckutt.css
@@ -4,6 +4,10 @@
 }
 
 /* History table */
+#panelTable {
+  padding-bottom: 10px;
+}
+
 table th:last-child {
     width: 10%;
 }
